    start with sending USBPID_DATA0.
  - Changed defaults in usbconfig-prototype.h
  - Added free USB VID/PID pair for MIDI class devices
  - Restructured AVR-USB as separate package, not part of PowerSwitch any more.

* Release 2008-04-18

  - Restructured usbdrv.c so that it is easier to read and understand.
  - Better code optimization with gcc 4.
  - If a second interrupt in endpoint is enabled, also add it to config
    descriptor.
  - Added config option for long transfers (above 254 bytes), see
    USB_CFG_LONG_TRANSFERS in usbconfig.h.
  - Added 20 MHz module contributed by Jeroen Benschop.

* Release 2008-05-13

  - Fixed bug in libs-host/hiddata.c function usbhidGetReport(): length
    was not incremented, pointer to length was incremented instead.
  - Added code to command line tool(s) which claims an interface. This code
    is disabled by default, but may be necessary on newer Linux kernels.
  - Added usbconfig.h option "USB_CFG_CHECK_DATA_TOGGLING".
  - New header "usbportability.h" prepares ports to other development
    environments.
  - Long transfers (above 254 bytes) did not work when usbFunctionRead() was
    used to supply the data. Fixed this bug. [Thanks to Alexander Neumann!]
  - In hiddata.c (example code for sending/receiving data over HID), use
    USB_RECIP_DEVICE instead of USB_RECIP_INTERFACE for control transfers so
    that we need not claim the interface.
  - in usbPoll() loop 20 times polling for RESET state instead of 10 times.
    This accounts for the higher clock rates we now support.
  - Added a module for 12.8 MHz RC oscillator with PLL in receiver loop.
  - Added hook to SOF code so that oscillator can be tuned to USB frame clock.
  - Added timeout to waitForJ loop. Helps preventing unexpected hangs.
  - Added example code for oscillator tuning to libs-device (thanks to
    Henrik Haftmann for the idea to this routine).
  - Implemented option USB_CFG_SUPPRESS_INTR_CODE.

* Release 2008-10-22